[package]
name = "laxci"
version = "0.1.0"
edition = "2024"
authors = ["CalC <hello@vinm.me>"]
description = "A simple, CI tool for building and testing projects locally."
readme = "README.md"
license = "MIT"
repository = "https://github.com/07calc/laxci"
categories = ["development-tools"]
keywords = ["ci", "continuous-integration", "local-ci", "build", "test"]
exclude = ["target", "/.git", "/.github", "laxci.yml"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
duct = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
